Modify Upstream Servers

--- a/vhosts/www-nutraxen-com.conf
+++ b/vhosts/www-nutraxen-com.conf
@@ -63,8 +63,8 @@ upstream iisfarm {
      # UPSTREAM IIS SERVERS
       server ww1.nutraxen.com;
       server ww2.nutraxen.com;
-      server ww3.nutraxen.com;
-      server ww4.nutraxen.com;
+      #server ww3.nutraxen.com;
+      #server ww4.nutraxen.com;
       #server ww5.nutraxen.com;
 
 
@@ -74,7 +74,9 @@ upstream iisfarm {
       check interval=10000 rise=1 fall=2 timeout=1000 type=http;
       #check_http_send "GET / HTTP/1.0\r\n\r\n";
       #check_http_send "GET /server-health.asp HTTP/1.0\r\nHost: yourname.com\r\n\r\n";
-      check_http_send "GET /server-health.asp HTTP/1.0\r\nHost: ww1.nutraxen.com\r\n\r\n";
+      #check_http_send "GET /server-health.asp HTTP/1.0\r\nHost: nutraxen.com\r\n\r\n";
+      check_http_send "GET /iis-health/default.asp HTTP/1.0\r\nHost: nutraxen.com\r\n\r\n";
+     
       check_http_expect_alive http_2xx http_3xx;
 }
 
@@ -113,9 +115,9 @@ server {
 
 
     # PREVENT SCRAPING
-		  if ($http_user_agent ~* LWP::Simple|BBBike|wget) { return 403;}
+		#  if ($http_user_agent ~* LWP::Simple|BBBike|wget) { return 403;}
 		# BLOCK BAD REFERRER
-		  if ( $http_referer ~* (poker|porn|sex|teen) ) { return 403;} 
+		#  if ( $http_referer ~* (poker|porn|sex|teen) ) { return 403;} 
 
 		# HEADERS FOR STRICT SSL
     add_header                Strict-Transport-Security "max-age=16070400; includeSubdomains";
@@ -185,7 +187,7 @@ server {
 	   access_log          /dev/null;
 	   #error_log           /dev/null;
 	 # DEBUG LOGGING
-		error_log           /var/log/nginx/nutraxen.com.error.log debug;
+		error_log           /var/log/nginx/nutraxen.com.error.log ;
     #access_log          /var/log/nginx/nutraxen.com.log ;
 }
 
@@ -347,7 +349,7 @@ server {
 	   access_log          /dev/null;
 	   #error_log           /dev/null;
 	 # DEBUG LOGGING
-		error_log           /var/log/nginx/x.nutraxen.com.error.log debug;
+		error_log           /var/log/nginx/x.nutraxen.com.error.log ;
     #access_log          /var/log/nginx/x.nutraxen.com.log ;
 }
 
