--- a/vhosts/www-nutraxen-com.conf
+++ b/vhosts/www-nutraxen-com.conf
@@ -2,7 +2,7 @@
 # nginx site configuration
 # https://www.nutraxen.com
 # www-nutraxen-com.conf
-# With EV CERTIFICATE! 
+# With EV CERTIFICATE!
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
 
@@ -31,7 +31,7 @@ server {
   ssl on;
   listen      443 ssl;
   server_name nutraxen.com;
-  
+
   #REDIRECT TO SSL https://www.nutraxen.com
     rewrite ^ https://www.nutraxen.com$request_uri? permanent;
 
@@ -39,7 +39,7 @@ server {
   # ssl_certificate /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen_basic.crt;
   # EXTENDED VALIDATION CERTIFICATE (GREEN BAR)
     ssl_certificate /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen_ev.crt;
-    
+
   # SSL KEY
     ssl_certificate_key /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen.com.key;
 
@@ -75,10 +75,11 @@ upstream iisfarm {
       #check_http_send "GET / HTTP/1.0\r\n\r\n";
       #check_http_send "GET /server-health.asp HTTP/1.0\r\nHost: yourname.com\r\n\r\n";
       #check_http_send "GET /server-health.asp HTTP/1.0\r\nHost: nutraxen.com\r\n\r\n";
-      check_http_send "GET /iis-health/default.asp HTTP/1.0\r\nHost: nutraxen.com\r\n\r\n";
-     
-      check_http_expect_alive http_2xx http_3xx;
+       check_http_send "GET /iis-health/default.asp HTTP/1.0\r\nHost: nutraxen.com\r\n\r\n";
+       check_http_expect_alive http_2xx http_3xx;
 }
+
+
 
 
 
@@ -93,13 +94,13 @@ server {
        root               /usr/share/nginx/sites/nutraxen-down/;
        keepalive_timeout  5;
        allow              all;
-       server_tokens      off; 
+       server_tokens      off;
        gzip               on;
        gzip_vary          on;
 
     # SSL SETTINGS(with SPDY 2)
        ssl on;
-       listen 443 ssl spdy; 
+       listen 443 ssl spdy;
        ssl_session_timeout        15m;
        ssl_protocols              SSLv3 TLSv1 TLSv1.1 TLSv1.2;
        ssl_ciphers                RC4:HIGH:!aNULL:!MD5;
@@ -109,21 +110,21 @@ server {
     # BASIC SSL CERTIFICATE (TEMPORARY)
     # ssl_certificate /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen_basic.crt;
     # EXTENDED VALIDATION CERTIFICATE (GREEN BAR)
-      ssl_certificate /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen_ev.crt;  
+      ssl_certificate /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen_ev.crt;
     # SSL KEY
       ssl_certificate_key /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen.com.key;
 
 
     # PREVENT SCRAPING
-		#  if ($http_user_agent ~* LWP::Simple|BBBike|wget) { return 403;}
-		# BLOCK BAD REFERRER
-		#  if ( $http_referer ~* (poker|porn|sex|teen) ) { return 403;} 
+                  if ($http_user_agent ~* LWP::Simple|BBBike|wget) { return 403;}
+                # BLOCK BAD REFERRER
+                  if ( $http_referer ~* (poker|porn|sex|teen) ) { return 403;}
 
-		# HEADERS FOR STRICT SSL
+                # HEADERS FOR STRICT SSL
     add_header                Strict-Transport-Security "max-age=16070400; includeSubdomains";
     add_header                X-Frame-Options SAMEORIGIN;
     add_header                Cache-Control public;
-		more_set_headers          "Server: BATMAN";
+                more_set_headers          "Server: BATMAN";
 
     # IIS FARM DASHBOARD  https://www.nutraxen.com/server-status
     location /server-status {
@@ -150,10 +151,10 @@ server {
            #proxy_connect_timeout 5;
            #proxy_read_timeout 240;
 
-         #HTTP ERRORS LOCALLY 
-           proxy_intercept_errors on; 
+         #HTTP ERRORS LOCALLY
+           proxy_intercept_errors on;
            error_page 500 502 503 504 =503 /maintenance.html;
-           #error_page 404 =404 /404.html;      
+           #error_page 404 =404 /404.html;
            proxy_cache            off;
     }
 
@@ -163,6 +164,7 @@ server {
          index  maintenance.html index.html index.htm;
          allow all;
     }
+
 
 
     # LOCAL 404 PAGE
@@ -175,21 +177,23 @@ server {
     # LOCAL 404 PAGE IMAGES
     location /xs {
          root   /usr/share/nginx/sites/nutraxen-down/;
-         allow  all;    	
+         allow  all;
     }
 
     # ERROR PAGES (LOCAL)
-		  error_page 404  /usr/share/nginx/sites/nutraxen-down/404.html;
-		  error_page 500 502 503 504 =503 /usr/share/nginx/sites/nutraxen-down/maintenance.html;
+                  error_page 404  /usr/share/nginx/sites/nutraxen-down/404.html;
+                  error_page 500 502 503 504 =503 /usr/share/nginx/sites/nutraxen-down/maintenance.html;
 
 
-	 # NO LOGGING
-	   access_log          /dev/null;
-	   #error_log           /dev/null;
-	 # DEBUG LOGGING
-		error_log           /var/log/nginx/nutraxen.com.error.log ;
+         # NO LOGGING
+           access_log          /dev/null;
+           #error_log           /dev/null;
+         # DEBUG LOGGING
+                error_log           /var/log/nginx/nutraxen.com.error.log debug;
     #access_log          /var/log/nginx/nutraxen.com.log ;
 }
+
+
 
 
 
@@ -212,18 +216,18 @@ server {
        root               /usr/share/nginx/sites/nutraxen-down/;
        keepalive_timeout  5;
        allow              all;
-       server_tokens      off; 
+       server_tokens      off;
 
-  # IN CASE ANYONE VISITS SITE USING X.NUTAXEN.COM 
+  # IN CASE ANYONE VISITS SITE USING X.NUTAXEN.COM
   location / {
     # PERFORMANCE
-      #expires           				max;
+      #expires                                          max;
       expires                   365d;
       add_header Cache-Control "public, must-revalidate, proxy-revalidate";
       #add_header               Last-Modified modified;
       #add_header                ETag "";
       etag                      on;
-		  more_set_headers          "Server: ALFRED";
+                  more_set_headers          "Server: ALFRED";
       gzip                      on;
       gzip_vary                 on;
       gzip_http_version         1.0;
@@ -256,7 +260,7 @@ server {
         # BASIC SETTINGS
           keepalive_timeout  5;
           allow              all;
-          server_tokens      off; 
+          server_tokens      off;
 
         # PROXY SETTINGS
            proxy_redirect         off;
@@ -271,7 +275,7 @@ server {
            proxy_cache_use_stale  error timeout invalid_header updating
                                    http_500 http_502 http_503 http_504;
         # PERFORMANCE
-          #expires           				max;
+          #expires                                      max;
           expires                   365d;
           #add_header                Cache-Control "public, must-revalidate, proxy-revalidate";
           add_header                Cache-Control "public";
@@ -299,7 +303,7 @@ server {
         # BASIC SETTINGS
           keepalive_timeout  5;
           allow              all;
-          server_tokens      off; 
+          server_tokens      off;
 
         # PROXY SETTINGS
            proxy_redirect         off;
@@ -314,7 +318,7 @@ server {
            proxy_cache_use_stale  error timeout invalid_header updating
                                    http_500 http_502 http_503 http_504;
         # PERFORMANCE
-          #expires           				max;
+          #expires                                      max;
           expires                   365d;
           #add_header                Cache-Control "public, must-revalidate, proxy-revalidate";
           add_header                Cache-Control "public";
@@ -335,7 +339,8 @@ server {
           open_file_cache_errors    on;
           break;
     }
-  
+
+
 
 
 #
@@ -345,12 +350,11 @@ server {
 
 
 
-	 # NO LOGGING
-	   access_log          /dev/null;
-	   #error_log           /dev/null;
-	 # DEBUG LOGGING
-		error_log           /var/log/nginx/x.nutraxen.com.error.log ;
+         # NO LOGGING
+           access_log          /dev/null;
+           #error_log           /dev/null;
+         # DEBUG LOGGING
+                error_log           /var/log/nginx/x.nutraxen.com.error.log debug;
     #access_log          /var/log/nginx/x.nutraxen.com.log ;
 }
-
 
