--- a/vhosts/www-nutraxen-com.conf
+++ b/vhosts/www-nutraxen-com.conf
@@ -62,7 +62,7 @@ upstream iisfarm {
 
      # UPSTREAM IIS SERVERS
       server ww1.nutraxen.com;
-      server ww2.nutraxen.com;
+      #server ww2.nutraxen.com;
       #server ww3.nutraxen.com;
       #server ww4.nutraxen.com;
       #server ww5.nutraxen.com;
@@ -73,8 +73,8 @@ upstream iisfarm {
     # https://github.com/yaoweibin/nginx_upstream_check_module
       check interval=10000 rise=1 fall=2 timeout=1000 type=http;
       #check_http_send "GET / HTTP/1.0\r\n\r\n";
-      #check_http_send "GET /server-health.asp HTTP/1.0\r\nHost: yourname.com\r\n\r\n";
-      #check_http_send "GET /server-health.asp HTTP/1.0\r\nHost: nutraxen.com\r\n\r\n";
+      #check_http_send "GET /iis-health/default.asp HTTP/1.0\r\nHost: yourname.com\r\n\r\n";
+      #check_http_send "GET /iis-health/default.asp HTTP/1.0\r\nHost: nutraxen.com\r\n\r\n";
        check_http_send "GET /iis-health/default.asp HTTP/1.0\r\nHost: nutraxen.com\r\n\r\n";
        check_http_expect_alive http_2xx http_3xx;
 }
