--- a/vhosts/www-decalicious-com.conf
+++ b/vhosts/www-decalicious-com.conf
@@ -1,3 +1,23 @@
+    # SSL SETTINGS(with SPDY 2)
+    #   ssl on;
+    #   listen 443 ssl spdy; 
+    #   ssl_session_timeout        15m;
+    #   ssl_protocols              SSLv3 TLSv1 TLSv1.1 TLSv1.2;
+    #   ssl_ciphers                RC4:HIGH:!aNULL:!MD5;
+    #   ssl_prefer_server_ciphers  on;
+    #   ssl_session_cache          shared:SSL:10m;
+
+    ##  BASIC SSL CERTIFICATE (TEMPORARY)
+    #  ssl_certificate /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen_basic.crt;
+    ##  EXTENDED VALIDATION CERTIFICATE (GREEN BAR)
+    #  ssl_certificate /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen_ev.crt;  
+    #  SSL KEY
+    #  ssl_certificate_key /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen.com.key;
+
+	 # HEADERS FOR STRICT SSL
+    add_header                Strict-Transport-Security "max-age=16070400; includeSubdomains";
+
+
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # nginx site configuration
 # https://www.decalicious.com
@@ -13,36 +33,9 @@
 #--------------------------------------
 server {
   listen      80;
-  server_name nutrixen.com nutraxen.com www.nutrixen.com www.nutraxen.com;
-  # REDIRECT TO SSL https://www.nutraxen.com
-  rewrite ^ https://www.nutraxen.com$request_uri? permanent;
-  # NO LOGGING
-    access_log          /dev/null;
-    error_log           /dev/null;
-}
-
-
-
-# -------------------------------------
-#      SSL REDIRECT MISSING WWW       -
-#--------------------------------------
-server {
-
-  ssl on;
-  listen      443 ssl;
-  server_name nutraxen.com;
-  
-  #REDIRECT TO SSL https://www.nutraxen.com
-    rewrite ^ https://www.nutraxen.com$request_uri? permanent;
-
-  # BASIC SSL CERTIFICATE (TEMPORARY)
-  # ssl_certificate /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen_basic.crt;
-  # EXTENDED VALIDATION CERTIFICATE (GREEN BAR)
-    ssl_certificate /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen_ev.crt;
-    
-  # SSL KEY
-    ssl_certificate_key /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen.com.key;
-
+  server_name dec.al decalciious.net decalishus.com;
+  # REDIRECT TO http://www.decalicious.com
+  rewrite ^ http://www.decalicious.com$request_uri? permanent;
   # NO LOGGING
     access_log          /dev/null;
     error_log           /dev/null;
@@ -55,17 +48,17 @@ server {
 # -------------------------------------------
 #          BACKEND IIS SERVER FARM          -
 # -------------------------------------------
-upstream iisfarm {
+upstream iis-servers {
 
      # STICKY IP (SAME SERVER BASED ON IP)
       ip_hash;
 
      # UPSTREAM IIS SERVERS
-      server ww1.nutraxen.com;
-      server ww2.nutraxen.com;
-      #server ww3.nutraxen.com;
-      #server ww4.nutraxen.com;
-      #server ww5.nutraxen.com;
+      server ww1.decalicious.com;
+      server ww2.decalicious.com;
+      #server ww3.decalicious.com;
+      #server ww4.decalicious.com;
+      #server ww5.decalicious.com;
 
 
 
@@ -73,66 +66,50 @@ upstream iisfarm {
     # https://github.com/yaoweibin/nginx_upstream_check_module
       check interval=10000 rise=1 fall=2 timeout=1000 type=http;
       #check_http_send "GET / HTTP/1.0\r\n\r\n";
-      #check_http_send "GET /server-health.asp HTTP/1.0\r\nHost: yourname.com\r\n\r\n";
-      #check_http_send "GET /server-health.asp HTTP/1.0\r\nHost: nutraxen.com\r\n\r\n";
-      check_http_send "GET /iis-health/default.asp HTTP/1.0\r\nHost: nutraxen.com\r\n\r\n";
-     
-      check_http_expect_alive http_2xx http_3xx;
+      #check_http_send "GET /iis-health/default.asp HTTP/1.0\r\nHost: yourname.com\r\n\r\n";
+      #check_http_send "GET /iis-health/default.asp HTTP/1.0\r\nHost: nutraxen.com\r\n\r\n";
+       check_http_send "GET /iis-health/default.asp HTTP/1.0\r\nHost: nutraxen.com\r\n\r\n";
+       check_http_expect_alive http_2xx http_3xx;
 }
 
 
 
 
-# -------------------------------------------
-#       ACTUAL SITE WITH - SSL CERTIFICATE
-# -------------------------------------------
+
+# ----------------------------------------------------------
+#       DECALICIOUS.com (with any subdomain)
+# ----------------------------------------------------------
 server {
 
     # SERVER SPECIFIC SETTINGS
-       server_name        www.nutraxen.com;
-       root               /usr/share/nginx/sites/nutraxen-down/;
+  		 listen      80;
+       server_name        *.decalicious.com;
+       root               /usr/share/nginx/sites/decalicious-down/;
        keepalive_timeout  5;
        allow              all;
        server_tokens      off; 
        gzip               on;
        gzip_vary          on;
-
-    # SSL SETTINGS(with SPDY 2)
-       ssl on;
-       listen 443 ssl spdy; 
-       ssl_session_timeout        15m;
-       ssl_protocols              SSLv3 TLSv1 TLSv1.1 TLSv1.2;
-       ssl_ciphers                RC4:HIGH:!aNULL:!MD5;
-       ssl_prefer_server_ciphers  on;
-       ssl_session_cache          shared:SSL:10m;
-
-    # BASIC SSL CERTIFICATE (TEMPORARY)
-    # ssl_certificate /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen_basic.crt;
-    # EXTENDED VALIDATION CERTIFICATE (GREEN BAR)
-      ssl_certificate /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen_ev.crt;  
-    # SSL KEY
-      ssl_certificate_key /usr/share/nginx/ssl-certs/nutraxen_com/nutraxen.com.key;
-
-
-    # PREVENT SCRAPING
-		#  if ($http_user_agent ~* LWP::Simple|BBBike|wget) { return 403;}
-		# BLOCK BAD REFERRER
-		#  if ( $http_referer ~* (poker|porn|sex|teen) ) { return 403;} 
-
-		# HEADERS FOR STRICT SSL
-    add_header                Strict-Transport-Security "max-age=16070400; includeSubdomains";
+  
+    # HEADERS FOR OTHER THINGS
     add_header                X-Frame-Options SAMEORIGIN;
     add_header                Cache-Control public;
-		more_set_headers          "Server: BATMAN";
+		more_set_headers          "Server: DECALS";
 
-    # IIS FARM DASHBOARD  https://www.nutraxen.com/server-status
-    location /server-status {
+    # IIS FARM DASHBOARD  https://www.decalicious.com/iis-servers
+    location /iis-servers {
         check_status;
         access_log   off;
         # allow SOME.IP.ADD.RESS;
         # deny all;
         allow all;
     }
+
+    # PREVENT SCRAPING
+		#  if ($http_user_agent ~* LWP::Simple|BBBike|wget) { return 403;}
+		# BLOCK BAD REFERRER
+		#  if ( $http_referer ~* (poker|porn|sex|teen) ) { return 403;} 
+
 
 
 
@@ -141,25 +118,25 @@ server {
 
         # PROXY SETTINGS
            proxy_redirect         off;
-           proxy_set_header       Host              "www.nutraxen.com";
+           proxy_set_header       Host              $http_host;
            proxy_set_header       X-Real-IP         $remote_addr;
            proxy_set_header       X-Forwarded-For   $proxy_add_x_forwarded_for;
            proxy_set_header       X-Forwarded-Proto $scheme;
-           proxy_pass             http://iisfarm;
+           proxy_pass             http://iis-servers;
            proxy_temp_path        /usr/share/nginx/temp;
            #proxy_connect_timeout 5;
            #proxy_read_timeout 240;
+           proxy_cache            off;
 
          #HTTP ERRORS LOCALLY 
            proxy_intercept_errors on; 
            error_page 500 502 503 504 =503 /maintenance.html;
            #error_page 404 =404 /404.html;      
-           proxy_cache            off;
     }
 
     # DOWN FOR MAINTENANCE
     location  ^~ /maintenance.html {
-         root   /usr/share/nginx/sites/nutraxen-down/;
+         root   /usr/share/nginx/sites/decalicious-down/;
          index  maintenance.html index.html index.htm;
          allow all;
     }
@@ -167,28 +144,28 @@ server {
 
     # LOCAL 404 PAGE
     location  ^~ /404.html {
-         root   /usr/share/nginx/sites/nutraxen-down/;
+         root   /usr/share/nginx/sites/decalicious-down/;
          index  404.html index.html index.htm;
          allow all;
     }
 
-    # LOCAL 404 PAGE IMAGES
+    # LOCAL ERROR PAGE SCRIPTS AND IMAGES
     location /xs {
-         root   /usr/share/nginx/sites/nutraxen-down/;
+         root   /usr/share/nginx/sites/decalicious-down/;
          allow  all;    	
     }
 
     # ERROR PAGES (LOCAL)
-		  error_page 404  /usr/share/nginx/sites/nutraxen-down/404.html;
-		  error_page 500 502 503 504 =503 /usr/share/nginx/sites/nutraxen-down/maintenance.html;
+		  error_page 404  /usr/share/nginx/sites/decalicious-down/404.html;
+		  error_page 500 502 503 504 =503 /usr/share/nginx/sites/decalicious-down/maintenance.html;
 
 
 	 # NO LOGGING
 	   access_log          /dev/null;
 	   #error_log           /dev/null;
 	 # DEBUG LOGGING
-		error_log           /var/log/nginx/nutraxen.com.error.log ;
-    #access_log          /var/log/nginx/nutraxen.com.log ;
+		error_log           /var/log/nginx/decalicious.com.error.log ;
+    #access_log          /var/log/nginx/decalicious.com.log ;
 }
 
 
@@ -202,14 +179,14 @@ server {
 
 
 # -------------------------------------------
-#       STATIC ITEMS X.NUTRAXEN.COM
+#       STATIC ITEMS X.DECALCIOIUS
 # -------------------------------------------
 server {
 
     # SERVER SPECIFIC SETTINGS
        listen             80;
-       server_name        x.nutraxen.com;
-       root               /usr/share/nginx/sites/nutraxen-down/;
+       server_name        x.decalicious.com;
+       root               /usr/share/nginx/sites/decalicious-down/;
        keepalive_timeout  5;
        allow              all;
        server_tokens      off; 
@@ -240,7 +217,7 @@ server {
      proxy_set_header       X-Real-IP         $remote_addr;
      proxy_set_header       X-Forwarded-For   $proxy_add_x_forwarded_for;
      proxy_set_header       X-Forwarded-Proto $scheme;
-     proxy_pass             http://iisfarm;
+     proxy_pass             http://iis-servers;
      proxy_temp_path        /usr/share/nginx/temp;
      # TURN OFF CACHING FOR MAIN LOCATION
      proxy_cache            off;
@@ -264,7 +241,7 @@ server {
            proxy_set_header       X-Real-IP         $remote_addr;
            proxy_set_header       X-Forwarded-For   $proxy_add_x_forwarded_for;
            proxy_set_header       X-Forwarded-Proto $scheme;
-           proxy_pass             http://iisfarm;
+           proxy_pass             http://iis-servers;
            proxy_temp_path        /usr/share/nginx/temp;
            proxy_cache            STATIC;
            proxy_cache_valid      200  1d;
@@ -307,7 +284,7 @@ server {
            proxy_set_header       X-Real-IP         $remote_addr;
            proxy_set_header       X-Forwarded-For   $proxy_add_x_forwarded_for;
            proxy_set_header       X-Forwarded-Proto $scheme;
-           proxy_pass             http://iisfarm;
+           proxy_pass             http://iis-servers;
            proxy_temp_path        /usr/share/nginx/temp;
            proxy_cache            STATIC;
            proxy_cache_valid      200  1d;
