--- a/vhosts/www-decalicious-com.conf
+++ b/vhosts/www-decalicious-com.conf
@@ -74,7 +74,6 @@ upstream iis-servers {
 
 
 
-
 # ----------------------------------------------------------
 #       DECALICIOUS.com (with any subdomain)
 # ----------------------------------------------------------
@@ -132,6 +131,10 @@ server {
            error_page 500 502 503 504 =503 /maintenance.html;
            #error_page 404 =404 /404.html;      
     }
+
+
+    location /
+
 
     # DOWN FOR MAINTENANCE
     location  ^~ /maintenance.html {
