Php Installed - Now Test it

--- a/vhosts/azure-default-site.conf
+++ b/vhosts/azure-default-site.conf
@@ -39,7 +39,7 @@ server {
 
 		location / {
 			root   /usr/share/nginx/sites/wwwroot/;
-			index  index.html index.htm;
+			index  index.html index.htm index.php;
 			allow all;
 		}
 
@@ -54,6 +54,24 @@ server {
 			root   html;
 			allow all;
 		}
+
+		# pas PHP scripts to FastCGI server listing on 127.0.0.1:9000
+		location ~ \.php$ {
+			try_files $uri =404;
+			fastcgi_split_path_info ^(.+\.php)(/.+)$;
+			fastcgi_pass 127.0.0.1:9000;
+			fastcgi_index index.php;
+			include fastcgi_params;
+		}		
+
+		# deny access to .htaccess files, if Apache's document root
+		# concurs with nginx's one
+		#
+		location ~ /\.ht {
+			deny all;
+		}
+
+
 
 	# Turn off logging
 	access_log          /dev/null;
