--- a/vhosts/azure-default-site.conf
+++ b/vhosts/azure-default-site.conf
@@ -36,10 +36,12 @@ server {
 server {
     listen      80;
     server_name *.cloudapp.net;
+    #root /usr/share/nginx/www;
+    index index.php index.html index.htm;
 
 		location / {
 			root   /usr/share/nginx/sites/wwwroot/;
-			index  index.html index.htm index.php;
+			try_files $uri $uri/ /index.html;
 			allow all;
 		}
 
