--- a/vhosts/azure-default-site.conf
+++ b/vhosts/azure-default-site.conf
@@ -1,83 +1,54 @@
-# ---------------------------------------------------
-#     DEFAULT WEBSITE (IP VISITOR OR MISSING DOMAIN?)
-#-----------------------------------------------------
-server {
-		listen 80 default;
-
-		# RETUNR AN ERROR 500 WHEN TRYING TO BROWSE BY IP
-		location / {
-			root   /usr/share/nginx/sites/wwwroot/;
-			index  index.html index.htm;
-			allow all;
-			#return 500;
-		}
-
-		error_page   404  /404.html;
-			location = /usr/share/nginx/sites/wwwroot/404.html {
-			root   html;
-			allow all;
-		}
-
-		error_page   500 502 503 504  /error.html;
-			location = /usr/share/nginx/sites/wwwroot/error.html {
-			root   html;
-			allow all;
-		}
-
-	# Turn off logging
-	access_log          /dev/null;
-	error_log           /dev/null;
-
-}
 
 # ---------------------------------------------------
 #     CLOUDAPP AZURE NAME
 #-----------------------------------------------------
 server {
-    listen      80;
-    server_name *.cloudapp.net;
+    listen      80 default;
+    # Make site accessible from http://localhost/
+    server_name _;
+    
     #root /usr/share/nginx/www;
     index index.php index.html index.htm;
 
-		location / {
-			root   /usr/share/nginx/sites/wwwroot/;
-			try_files $uri $uri/ /index.html;
-			allow all;
-		}
+        location / {
+            root   /usr/share/nginx/sites/wwwroot/;
+            try_files $uri $uri/ /index.html;
+            allow all;
+        }
 
-		error_page   404  /404.html;
-			location = /usr/share/nginx/sites/wwwroot/404.html {
-			root   html;
-			allow all;
-		}
+        error_page   404  /404.html;
+            location = /usr/share/nginx/sites/wwwroot/404.html {
+            root   html;
+            allow all;
+        }
 
-		error_page   500 502 503 504  /error.html;
-			location = /usr/share/nginx/sites/wwwroot/error.html {
-			root   html;
-			allow all;
-		}
+        error_page   500 502 503 504  /error.html;
+            location = /usr/share/nginx/sites/wwwroot/error.html {
+            root   html;
+            allow all;
+        }
 
-		# pas PHP scripts to FastCGI server listing on 127.0.0.1:9000
-		location ~ \.php$ {
-			try_files $uri =404;
-			fastcgi_split_path_info ^(.+\.php)(/.+)$;
-			fastcgi_pass 127.0.0.1:9000;
-			fastcgi_index index.php;
-			include fastcgi_params;
-		}		
+        # pas PHP scripts to FastCGI server listing on 127.0.0.1:9000
+        location ~ \.php$ {
+            try_files $uri =404;
+            fastcgi_split_path_info ^(.+\.php)(/.+)$;
+            fastcgi_pass 127.0.0.1:9000;
+            fastcgi_index index.php;
+            include fastcgi_params;
+        }        
 
-		# deny access to .htaccess files, if Apache's document root
-		# concurs with nginx's one
-		#
-		location ~ /\.ht {
-			deny all;
-		}
+        # deny access to .htaccess files, if Apache's document root
+        # concurs with nginx's one
+        #
+        location ~ /\.ht {
+            deny all;
+        }
 
 
 
-	# Turn off logging
-	access_log          /dev/null;
-	error_log           /dev/null;
+    # Turn off logging
+    access_log          /dev/null;
+    error_log           /dev/null;
 
 }
 
@@ -87,16 +58,16 @@ server {
 server {
   listen      100;
 
-		# Actual Page
-		location / {
-			root   /usr/share/nginx/sites/wwwroot/status/;
-			index  index.html;
-			allow all;
-			gzip                      on;
-			gzip_vary                 on;
-		}
+        # Actual Page
+        location / {
+            root   /usr/share/nginx/sites/wwwroot/status/;
+            index  index.html;
+            allow all;
+            gzip                      on;
+            gzip_vary                 on;
+        }
 
-	# Turn off logging
-	access_log          /dev/null;
-	error_log           /dev/null;
+    # Turn off logging
+    access_log          /dev/null;
+    error_log           /dev/null;
 }
