--- a/vhosts/azure-default-site.conf
+++ b/vhosts/azure-default-site.conf
@@ -4,16 +4,21 @@
 #-----------------------------------------------------
 server {
     listen      80 default;
+    listen   [::]:80 default ipv6only=on; ## listen for ipv6
+    
     # Make site accessible from http://localhost/
     server_name _;
     
     #root /usr/share/nginx/www;
+    root /usr/share/nginx/sites/wwwroot
     index index.php index.html index.htm;
 
         location / {
-            root   /usr/share/nginx/sites/wwwroot/;
-            try_files $uri $uri/ /index.html;
-            allow all;
+             # First attempt to serve request as file, then
+             # as directory, then fall back to index.html
+             try_files $uri $uri/ /index.html;
+             # Uncomment to enable naxsi on this location
+             # include /etc/nginx/naxsi.rules
         }
 
         error_page   404  /404.html;
@@ -28,27 +33,28 @@ server {
             allow all;
         }
 
-        # pas PHP scripts to FastCGI server listing on 127.0.0.1:9000
+        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+        #
         location ~ \.php$ {
-            try_files $uri =404;
-            fastcgi_split_path_info ^(.+\.php)(/.+)$;
-            fastcgi_pass 127.0.0.1:9000;
-            fastcgi_index index.php;
-            include fastcgi_params;
-        }        
+             try_files $uri =404;
+             fastcgi_split_path_info ^(.+\.php)(/.+)$;
+             fastcgi_pass 127.0.0.1:9000;
+             fastcgi_index index.php;
+             include fastcgi_params;
+        }     
 
         # deny access to .htaccess files, if Apache's document root
         # concurs with nginx's one
         #
         location ~ /\.ht {
-            deny all;
+                deny all;
         }
 
 
 
-    # Turn off logging
-    access_log          /dev/null;
-    error_log           /dev/null;
+       # Turn off logging
+       access_log          /dev/null;
+       error_log           /dev/null;
 
 }
 
