--- a/vhosts/azure-default-site.conf
+++ b/vhosts/azure-default-site.conf
@@ -35,13 +35,16 @@ server {
 
         # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
         #
-        location ~ \.php$ {
-             try_files $uri =404;
-             fastcgi_split_path_info ^(.+\.php)(/.+)$;
-             fastcgi_pass 127.0.0.1:9000;
-             fastcgi_index index.php;
-             include fastcgi_params;
-        }     
+        location ~ [^/]\.php(/|$) {
+                fastcgi_split_path_info ^(.+?\.php)(/.*)$;
+                if (!-f $document_root$fastcgi_script_name) {
+                        return 404;
+                }
+ 
+                fastcgi_pass 127.0.0.1:9000;
+                fastcgi_index index.php;
+                include fastcgi_params;
+        }   
 
         # deny access to .htaccess files, if Apache's document root
         # concurs with nginx's one
