--- a/vhosts/azure-default-site.conf
+++ b/vhosts/azure-default-site.conf
@@ -13,13 +13,13 @@ server {
     root /usr/share/nginx/sites/wwwroot
     index index.php index.html index.htm;
 
-        location / {
-             # First attempt to serve request as file, then
-             # as directory, then fall back to index.html
-             try_files $uri $uri/ /index.html;
-             # Uncomment to enable naxsi on this location
-             # include /etc/nginx/naxsi.rules
-        }
+ #       location / {
+ #            # First attempt to serve request as file, then
+ #            # as directory, then fall back to index.html
+ #            try_files $uri $uri/ /index.html;
+ #            # Uncomment to enable naxsi on this location
+ #            # include /etc/nginx/naxsi.rules
+ #       }
 
         error_page   404  /404.html;
             location = /usr/share/nginx/sites/wwwroot/404.html {
