--- a/etc-config/nginx.custom.conf
+++ b/etc-config/nginx.custom.conf
@@ -1,5 +1,6 @@
-# CUSTOM NGINX CONFIGURATION - NUTRAXEN
+# CUSTOM NGINX CONFIGURATION - MATADOR
 
+# redone
 # user  www-data;
 worker_processes    2;
 worker_priority    -5;
@@ -21,7 +22,8 @@ http {
     client_body_temp_path     /tmp/client_body_temp;
 
     include                   mime.types;
-    default_type              application/octet-stream;
+    #default_type             application/octet-stream;
+    default_type              text/html;  
     server_tokens             off;
     sendfile                  on;
     tcp_nopush                on;
