--- a/vhosts/azure-default-site.conf
+++ b/vhosts/azure-default-site.conf
@@ -35,15 +35,13 @@ server {
 
         # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
         #
-        location ~ [^/]\.php(/|$) {
-                fastcgi_split_path_info ^(.+?\.php)(/.*)$;
-                if (!-f $document_root$fastcgi_script_name) {
-                        return 404;
-                }
- 
-                fastcgi_pass 127.0.0.1:9000;
-                fastcgi_index index.php;
-                include fastcgi_params;
+        location ~* \.php$ {
+            fastcgi_index   index.php;
+            fastcgi_pass    127.0.0.1:9000;
+            #fastcgi_pass   unix:/var/run/php-fpm/php-fpm.sock;
+            include         fastcgi_params;
+            fastcgi_param   SCRIPT_FILENAME    $document_root$fastcgi_script_name;
+            fastcgi_param   SCRIPT_NAME        $fastcgi_script_name;
         }   
 
         # deny access to .htaccess files, if Apache's document root
