--- a/vhosts/azure-default-site.conf
+++ b/vhosts/azure-default-site.conf
@@ -33,17 +33,21 @@ server {
             allow all;
         }
 
-        # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-        #
-        location ~* \.php$ {
-            fastcgi_index   index.php;
-            fastcgi_pass    127.0.0.1:9000;
-            #fastcgi_pass   unix:/var/run/php-fpm/php-fpm.sock;
-            include         fastcgi_params;
-            fastcgi_param   SCRIPT_FILENAME    $document_root$fastcgi_script_name;
-            fastcgi_param   SCRIPT_NAME        $fastcgi_script_name;
-        }   
 
+			# pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
+			#
+			location ~ \.php$ {
+			    fastcgi_split_path_info ^(.+\.php)(/.+)$;
+			#   # NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
+			#
+			#   # With php5-cgi alone:
+			#   fastcgi_pass 127.0.0.1:9000;
+			#   # With php5-fpm:
+			    fastcgi_pass unix:/var/run/php5-fpm.sock;
+			    fastcgi_index index.php;
+			    include fastcgi_params;
+			}
+        
         # deny access to .htaccess files, if Apache's document root
         # concurs with nginx's one
         #
