--- a/vhosts/azure-default-site.conf
+++ b/vhosts/azure-default-site.conf
@@ -43,11 +43,13 @@ server {
 			#   # With php5-cgi alone:
 			#   fastcgi_pass 127.0.0.1:9000;
 			#   # With php5-fpm:
-			    fastcgi_pass unix:/var/run/php5-fpm.sock;
+
+			# IMPORTANT - 
+			    fastcgi_pass unix:/tmp/php5-fpm.sock;
 			    fastcgi_index index.php;
 			    include fastcgi_params;
 			}
-        
+
         # deny access to .htaccess files, if Apache's document root
         # concurs with nginx's one
         #
