--- a/vhosts/azure-default-site.conf
+++ b/vhosts/azure-default-site.conf
@@ -34,27 +34,19 @@ server {
         }
 
 
-			# pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-			#
-			location ~ \.php$ {
-			    fastcgi_split_path_info ^(.+\.php)(/.+)$;
-			#   # NOTE: You should have "cgi.fix_pathinfo = 0;" in php.ini
-			#
-			#   # With php5-cgi alone:
-			#   fastcgi_pass 127.0.0.1:9000;
-			#   # With php5-fpm:
 
-			# IMPORTANT - 
-			    fastcgi_pass unix:/tmp/php5-fpm.sock;
-			    fastcgi_index index.php;
-			    include fastcgi_params;
-			}
-
-        # deny access to .htaccess files, if Apache's document root
-        # concurs with nginx's one
-        #
-        location ~ /\.ht {
-                deny all;
+        location ~ [^/]\.php(/.*)?$ {
+            fastcgi_split_path_info ^(.+\.php)(/.*)?$;
+            # the if is not really necessary. 
+            # php-fpm already checks if the script has a .php extension
+            #~ if (!-f $document_root$fastcgi_script_name) {
+            #~    return 404;
+            #~ }
+            fastcgi_pass   unix:/tmp/php5-fpm.sock;
+            fastcgi_index  index.php;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $document_root$uri;
+            fastcgi_param PATH_INFO $fastcgi_path_info if_not_empty;
         }
 
 
