--- a/vhosts/azure-default-site.conf
+++ b/vhosts/azure-default-site.conf
@@ -10,7 +10,7 @@ server {
     server_name _;
     
     #root /usr/share/nginx/www;
-    root /usr/share/nginx/sites/wwwroot
+    root /usr/share/nginx/sites/wwwroot/;
     index index.php index.html index.htm;
 
         location / {
