--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -1,59 +1,83 @@
+# ---------------------------------------------------
+#     DEFAULT WEBSITE (IP VISITOR OR MISSING DOMAIN?)
+#-----------------------------------------------------
+server {
+		listen 80 default;
+
+		# RETUNR AN ERROR 500 WHEN TRYING TO BROWSE BY IP
+		location / {
+			root   /usr/share/nginx/sites/wwwroot/;
+			index  index.html index.htm;
+			allow all;
+			#return 500;
+		}
+
+		error_page   404  /404.html;
+			location = /usr/share/nginx/sites/wwwroot/404.html {
+			root   html;
+			allow all;
+		}
+
+		error_page   500 502 503 504  /error.html;
+			location = /usr/share/nginx/sites/wwwroot/error.html {
+			root   html;
+			allow all;
+		}
+
+	# Turn off logging
+	access_log          /dev/null;
+	error_log           /dev/null;
+
+}
 
 # ---------------------------------------------------
 #     CLOUDAPP AZURE NAME
 #-----------------------------------------------------
 server {
-    listen   80 default;
-    listen   [::]:80 default ipv6only=on; ## listen for ipv6
-    
-    # Make site accessible from http://localhost/
-    server_name *.cloudapp.net
-    
-    #root /usr/share/nginx/www;
-    root /usr/share/nginx/sites/wwwroot/;
-    index index.php index.html index.htm;
+    listen      80;
+    server_name *.cloudapp.net;
 
-        location / {
-             # First attempt to serve request as file, then
-             # as directory, then fall back to index.html
-             try_files $uri $uri/ /index.html;
-             # Uncomment to enable naxsi on this location
-             # include /etc/nginx/naxsi.rules
-        }
+		location / {
+			root   /usr/share/nginx/sites/wwwroot/;
+			index  index.html index.htm;
+			allow all;
+		}
 
-        error_page   404  /404.html;
-            location = /usr/share/nginx/sites/wwwroot/404.html {
-            root   html;
-            allow all;
-        }
+		error_page   404  /404.html;
+			location = /usr/share/nginx/sites/wwwroot/404.html {
+			root   html;
+			allow all;
+		}
 
-        error_page   500 502 503 504  /error.html;
-            location = /usr/share/nginx/sites/wwwroot/error.html {
-            root   html;
-            allow all;
-        }
+		error_page   500 502 503 504  /error.html;
+			location = /usr/share/nginx/sites/wwwroot/error.html {
+			root   html;
+			allow all;
+		}
 
+	# Turn off logging
+	access_log          /dev/null;
+	error_log           /dev/null;
 
+}
 
-        location ~ [^/]\.php(/.*)?$ {
-            fastcgi_split_path_info ^(.+\.php)(/.*)?$;
-            # the if is not really necessary. 
-            # php-fpm already checks if the script has a .php extension
-            #~ if (!-f $document_root$fastcgi_script_name) {
-            #~    return 404;
-            #~ }
-            fastcgi_pass   unix:/tmp/php5-fpm.sock;
-            fastcgi_index  index.php;
-            include fastcgi_params;
-            fastcgi_param SCRIPT_FILENAME $document_root$uri;
-            fastcgi_param PATH_INFO $fastcgi_path_info if_not_empty;
-        }
+# ------------------------------------------
+#     AZURE TRAFFIC MANAGER MONITORING PAGE
+#-------------------------------------------
+server {
+  listen      100;
 
+		# Actual Page
+		location / {
+			root   /usr/share/nginx/sites/wwwroot/status/;
+			index  index.html;
+			allow all;
+			gzip                      on;
+			gzip_vary                 on;
+		}
 
-
-       # Turn off logging
-       access_log          /dev/null;
-       error_log           /dev/null;
-
+	# Turn off logging
+	access_log          /dev/null;
+	error_log           /dev/null;
 }
 
