--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -55,6 +55,22 @@ server {
 			allow all;
 		}
 
+
+        location ~ [^/]\.php(/.*)?$ {
+            fastcgi_split_path_info ^(.+\.php)(/.*)?$;
+            # the if is not really necessary. 
+            # php-fpm already checks if the script has a .php extension
+            #~ if (!-f $document_root$fastcgi_script_name) {
+            #~    return 404;
+            #~ }
+            fastcgi_pass   unix:/tmp/php5-fpm.sock;
+            fastcgi_index  index.php;
+            include fastcgi_params;
+            fastcgi_param SCRIPT_FILENAME $document_root$uri;
+            fastcgi_param PATH_INFO $fastcgi_path_info if_not_empty;
+        }
+
+
 	# Turn off logging
 	access_log          /dev/null;
 	error_log           /dev/null;
