--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -39,7 +39,7 @@ server {
 
 		location / {
 			root   /usr/share/nginx/sites/wwwroot/;
-			index  index.html index.htm;
+			index  index.php index.html index.htm;
 			allow all;
 		}
 
@@ -56,18 +56,12 @@ server {
 		}
 
 
-        location ~ [^/]\.php(/.*)?$ {
-            fastcgi_split_path_info ^(.+\.php)(/.*)?$;
-            # the if is not really necessary. 
-            # php-fpm already checks if the script has a .php extension
-            #~ if (!-f $document_root$fastcgi_script_name) {
-            #~    return 404;
-            #~ }
-            fastcgi_pass   unix:/tmp/php5-fpm.sock;
-            fastcgi_index  index.php;
-            include fastcgi_params;
-            fastcgi_param SCRIPT_FILENAME $document_root$uri;
-            fastcgi_param PATH_INFO $fastcgi_path_info if_not_empty;
+        location ~ \.php$ {
+                try_files $uri =404;
+                fastcgi_split_path_info ^(.+\.php)(/.+)$;
+                fastcgi_pass 127.0.0.1:9000;
+                fastcgi_index index.php;
+                include fastcgi_params;
         }
 
 
