--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -59,7 +59,17 @@ server {
         location ~ \.php$ {
                 try_files $uri =404;
                 fastcgi_split_path_info ^(.+\.php)(/.+)$;
-                fastcgi_pass 127.0.0.1:9000;
+
+                # IMPORTANT - FOR UNIX SOCKET TO WORK YOU NEED TO CONFIGURE IT ON A PER SERVER BASIS
+                # 
+                # 
+                # 
+                # 
+
+
+
+                #fastcgi_pass 127.0.0.1:9000;               
+                fastcgi_pass unix:/tmp/php5-fpm.sock;
                 fastcgi_index index.php;
                 include fastcgi_params;
         }
