Index to Server

--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -36,10 +36,12 @@ server {
 server {
     listen      80;
     server_name *.cloudapp.net;
+	 root   /usr/share/nginx/sites/wwwroot/;
+	 index index.php index.html index.htm;
+
 
 		location / {
-			root   /usr/share/nginx/sites/wwwroot/;
-			index  index.php index.html index.htm;
+			try_files $uri $uri/ /index.html;
 			allow all;
 		}
 
@@ -61,13 +63,10 @@ server {
                 fastcgi_split_path_info ^(.+\.php)(/.+)$;
 
                 # IMPORTANT - FOR UNIX SOCKET TO WORK YOU NEED TO CONFIGURE IT ON A PER SERVER BASIS
-                # 
-                # 
-                # 
-                # 
-
-
-
+                # nano /etc/php5/fpm/pool.d/www.conf
+                # ;listen = 127.0.0.1:9000
+                # listen = /tmp/php5-fpm.sock
+                # /etc/init.d/php5-fpm reload
                 #fastcgi_pass 127.0.0.1:9000;               
                 fastcgi_pass unix:/tmp/php5-fpm.sock;
                 fastcgi_index index.php;
