--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -75,8 +75,11 @@ server {
 
 
 	# Turn off logging
-	access_log          /dev/null;
-	error_log           /dev/null;
+	error_log				/var/log/nginx/default-error.log
+	access_log				/var/log/nginx/default-access.log
+	#access_log          /dev/null;
+	#error_log           /dev/null;
+
 
 }
 
