--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -37,7 +37,7 @@ server {
     listen      80;
     server_name *.cloudapp.net;
 	 root   /usr/share/nginx/sites/wwwroot/;
-	 index index.php index.html index.htm;
+	 index  index.php index.html index.htm;
 
 
 		location / {
@@ -67,6 +67,9 @@ server {
                 # ;listen = 127.0.0.1:9000
                 # listen = /tmp/php5-fpm.sock
                 # /etc/init.d/php5-fpm reload
+
+
+
                 #fastcgi_pass 127.0.0.1:9000;               
                 fastcgi_pass unix:/tmp/php5-fpm.sock;
                 fastcgi_index index.php;
@@ -74,9 +77,12 @@ server {
         }
 
 
-	# Turn off logging
-	error_log				/var/log/nginx/default-error.log
-	access_log				/var/log/nginx/default-access.log
+
+	# Logging - ON
+	error_log				/var/log/nginx/default-error.log;
+	access_log				/var/log/nginx/default-access.log;
+	
+	# Logging - Off
 	#access_log          /dev/null;
 	#error_log           /dev/null;
 
