turn off unix socket

--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -37,11 +37,11 @@ server {
                 # ;listen = 127.0.0.1:9000
                 # listen = /tmp/php5-fpm.sock
                 # /etc/init.d/php5-fpm reload
+                # fastcgi_pass unix:/tmp/php5-fpm.sock;
 
 
 
-                #fastcgi_pass 127.0.0.1:9000;               
-                fastcgi_pass unix:/tmp/php5-fpm.sock;
+                fastcgi_pass 127.0.0.1:9000;               
                 fastcgi_index index.php;
                 include fastcgi_params;
         }
