--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -1,5 +1,10 @@
 
 
+upstream phpBackend {
+        server 127.0.0.1:9000;
+}
+
+
 # ---------------------------------------------------
 #     CLOUDAPP AZURE NAME
 #-----------------------------------------------------
@@ -40,10 +45,25 @@ server {
                 # fastcgi_pass unix:/tmp/php5-fpm.sock;
 
 
+     				fastcgi_split_path_info ^(.+\.php)(.*)$;
+        			fastcgi_pass   phpBackend;
+        			fastcgi_index  index.php;
+        			fastcgi_param  SCRIPT_FILENAME  /srv/http$fastcgi_script_name;
+        			include fastcgi_params;
+        			fastcgi_intercept_errors        on;
+        			fastcgi_ignore_client_abort     off;
+        			fastcgi_connect_timeout 60;
+        			fastcgi_send_timeout 180;
+        			fastcgi_read_timeout 180;
+        			fastcgi_buffer_size 128k;
+        			fastcgi_buffers 4 256k;
+        			fastcgi_busy_buffers_size 256k;
+        			fastcgi_temp_file_write_size 256k;
 
-                fastcgi_pass 127.0.0.1:9000;               
-                fastcgi_index index.php;
-                include fastcgi_params;
+
+               # fastcgi_pass 127.0.0.1:9000;               
+               # fastcgi_index index.php;
+               # include fastcgi_params;
         }
 
 
