--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -1,4 +1,6 @@
-
+# ---------------------------------------------------
+#     CUSTOM BACKEND TO HANDLE PHP REQUESTS
+#-----------------------------------------------------
 
 upstream phpBackend {
         server 127.0.0.1:9000;
@@ -6,7 +8,7 @@ upstream phpBackend {
 
 
 # ---------------------------------------------------
-#     CLOUDAPP AZURE NAME
+#     CLOUDAPP AZURE SERVER *.CLOUDAPP.NET
 #-----------------------------------------------------
 server {
     listen      80;
@@ -48,7 +50,7 @@ server {
      				fastcgi_split_path_info ^(.+\.php)(.*)$;
         			fastcgi_pass   phpBackend;
         			fastcgi_index  index.php;
-        			fastcgi_param  SCRIPT_FILENAME  /srv/http$fastcgi_script_name;
+        			fastcgi_param  SCRIPT_FILENAME  http$fastcgi_script_name;
         			include fastcgi_params;
         			fastcgi_intercept_errors        on;
         			fastcgi_ignore_client_abort     off;
