--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -50,7 +50,7 @@ server {
      				fastcgi_split_path_info ^(.+\.php)(/.+)$;
         			fastcgi_pass   phpBackend;
         			fastcgi_index  index.php;
-        			# fastcgi_param  SCRIPT_FILENAME  http$fastcgi_script_name;
+        			fastcgi_param  SCRIPT_FILENAME  /usr/share/nginx/sites/wwwroot/$fastcgi_script_name;
         			include fastcgi_params;
         			fastcgi_intercept_errors        on;
         			fastcgi_ignore_client_abort     off;
