Broken on purpose

--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -36,20 +36,12 @@ server {
 
 
         location ~ \.php$ {
-                try_files $uri =404;
-                fastcgi_split_path_info ^(.+\.php)(/.+)$;
-
-                # IMPORTANT - FOR UNIX SOCKET TO WORK YOU NEED TO CONFIGURE IT ON A PER SERVER BASIS
-                # nano /etc/php5/fpm/pool.d/www.conf
-                # ;listen = 127.0.0.1:9000
-                # listen = /tmp/php5-fpm.sock
-                # /etc/init.d/php5-fpm reload
-                # fastcgi_pass unix:/tmp/php5-fpm.sock;
-
+               try_files $uri =404;
 
      				fastcgi_split_path_info ^(.+\.php)(/.+)$;
         			fastcgi_pass   phpBackend;
         			fastcgi_index  index.php;
+        			# IMPORTANT BELOW - NEEDS FULL PATH TO SITE DIRECTORY !!!
         			fastcgi_param  SCRIPT_FILENAME  /usr/share/nginx/sites/wwwroot/$fastcgi_script_name;
         			include fastcgi_params;
         			fastcgi_intercept_errors        on;
@@ -62,10 +54,6 @@ server {
         			fastcgi_busy_buffers_size 256k;
         			fastcgi_temp_file_write_size 256k;
 
-
-               # fastcgi_pass 127.0.0.1:9000;               
-               # fastcgi_index index.php;
-               # include fastcgi_params;
         }
 
 
