--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -1,7 +1,6 @@
 # ---------------------------------------------------
 #     CUSTOM BACKEND TO HANDLE PHP REQUESTS
 #-----------------------------------------------------
-
 upstream phpBackend {
         server 127.0.0.1:9000;
 }
@@ -59,12 +58,12 @@ server {
 
 
 	# Logging - ON
-	error_log				/var/log/nginx/default-error.log;
-	access_log				/var/log/nginx/default-access.log;
+	#error_log				/var/log/nginx/default-error.log;
+	#access_log				/var/log/nginx/default-access.log;
 	
 	# Logging - Off
-	#access_log          /dev/null;
-	#error_log           /dev/null;
+	access_log          /dev/null;
+	error_log           /dev/null;
 
 
 }
