--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -72,6 +72,15 @@ upstream iis-servers {
        check_http_expect_alive http_2xx http_3xx;
 }
 
+# -------------------------------------------
+#          BACKEND IIS SERVER FARM          -
+# -------------------------------------------
+upstream blogger {
+      server blog.decalicious.com;
+}
+
+
+
 
 
 # ----------------------------------------------------------
