--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -73,7 +73,7 @@ upstream iis-servers {
 }
 
 # -------------------------------------------
-#          BACKEND IIS SERVER FARM          -
+#          BACKEND BLOGGER.COM BLOG         -
 # -------------------------------------------
 upstream blogger {
       server blog.decalicious.com;
@@ -89,19 +89,19 @@ upstream blogger {
 server {
 
     # SERVER SPECIFIC SETTINGS
-  		 listen      80;
-       server_name        *.decalicious.com;
-       root               /usr/share/nginx/sites/decalicious-down/;
-       keepalive_timeout  5;
-       allow              all;
-       server_tokens      off; 
-       gzip               on;
-       gzip_vary          on;
+		listen      80;
+		server_name        *.decalicious.com;
+		root               /usr/share/nginx/sites/decalicious-down/;
+		keepalive_timeout  5;
+		allow              all;
+		server_tokens      off; 
+		gzip               on;
+		gzip_vary          on;
   
     # HEADERS FOR OTHER THINGS
-    add_header                X-Frame-Options SAMEORIGIN;
-    add_header                Cache-Control public;
-	 more_set_headers          "Server: DECALS";
+		add_header                X-Frame-Options SAMEORIGIN;
+		add_header                Cache-Control public;
+		more_set_headers          "Server: DECALS";
 
     # IIS FARM DASHBOARD  https://www.decalicious.com/iis-servers
     location /iis-servers {
@@ -142,7 +142,26 @@ server {
     }
 
 
-    #location /
+    # MAIN SITE LOCATION
+    location /blog {
+
+        # PROXY SETTINGS
+           proxy_redirect         off;
+           proxy_set_header       Host              $http_host;
+           proxy_set_header       X-Real-IP         $remote_addr;
+           proxy_set_header       X-Forwarded-For   $proxy_add_x_forwarded_for;
+           proxy_set_header       X-Forwarded-Proto $scheme;
+           proxy_pass             http://blogger;
+           proxy_temp_path        /usr/share/nginx/temp;
+           #proxy_connect_timeout 5;
+           #proxy_read_timeout 240;
+           proxy_cache            off;
+
+         #HTTP ERRORS LOCALLY 
+           proxy_intercept_errors on; 
+           error_page 500 502 503 504 =503 /maintenance.html;
+           #error_page 404 =404 /404.html;      
+    }
 
 
     # DOWN FOR MAINTENANCE
