--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -125,7 +125,7 @@ server {
 
         # PROXY SETTINGS
            proxy_redirect         off;
-           proxy_set_header       Host              $proxy_host;
+           proxy_set_header       Host              $http_host;
            proxy_set_header       X-Real-IP         $remote_addr;
            proxy_set_header       X-Forwarded-For   $proxy_add_x_forwarded_for;
            proxy_set_header       X-Forwarded-Proto $scheme;
@@ -142,17 +142,15 @@ server {
     }
 
 
-    # MAIN SITE LOCATION
+    # BLOGGER BLOG [blog.decalicious.com > /blog]
     location /blog {
 
         # PROXY SETTINGS
            proxy_redirect         off;
-           proxy_set_header       Host              $http_host;
-           proxy_set_header       X-Real-IP         $remote_addr;
-           proxy_set_header       X-Forwarded-For   $proxy_add_x_forwarded_for;
-           proxy_set_header       X-Forwarded-Proto $scheme;
+           proxy_set_header       Host              http://blog.decalicious.com;
            proxy_pass             http://blogger;
            proxy_temp_path        /usr/share/nginx/temp;
+           proxy_pass_request_headers      on;
            #proxy_connect_timeout 5;
            #proxy_read_timeout 240;
            proxy_cache            off;
