directly put url

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -72,13 +72,6 @@ upstream iis-servers {
        check_http_expect_alive http_2xx http_3xx;
 }
 
-# -------------------------------------------
-#          BACKEND BLOGGER.COM BLOG         -
-# -------------------------------------------
-upstream blogger {
-      server blog.decalicious.com;
-}
-
 
 
 
@@ -148,7 +141,7 @@ server {
         # PROXY SETTINGS
            proxy_redirect         off;
            proxy_set_header       Host              http://blog.decalicious.com;
-           proxy_pass             http://blogger;
+           proxy_pass             http://blog.decalicious.com;
            proxy_temp_path        /usr/share/nginx/temp;
            proxy_pass_request_headers      on;
            #proxy_connect_timeout 5;
