--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -114,7 +114,7 @@ server {
 
 
     # MAIN SITE LOCATION
-    location / {
+    location /xxx {
 
         # PROXY SETTINGS
            proxy_redirect         off;
@@ -136,7 +136,7 @@ server {
 
 
     # BLOGGER BLOG [blog.decalicious.com > /blog]
-    location /blog {
+    location / {
 
         # PROXY SETTINGS
            proxy_redirect         off;
