no more subdomain

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -140,8 +140,8 @@ server {
 
         # PROXY SETTINGS
            proxy_redirect         off;
-           proxy_set_header       Host              http://blog.decalicious.com;
-           proxy_pass             http://blog.decalicious.com;
+           proxy_set_header       Host              http://decalicious-com.blogspot.com;
+           proxy_pass             http://decalicious-com.blogspot.com;
            proxy_temp_path        /usr/share/nginx/temp;
            proxy_pass_request_headers      on;
            #proxy_connect_timeout 5;
