--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -85,7 +85,12 @@ server {
  }
 
  # Turn off logging
- access_log          /dev/null;
- error_log           /dev/null;
+ #access_log          /dev/null;
+ #error_log           /dev/null;
+
+ error_log       /var/log/nginx/default-error.log;
+ access_log      /var/log/nginx/default-access.log;
+
+
 }
 
