--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -34,8 +34,8 @@ server {
  }
 
 
- # AZURE CDN NUTRAXEN
- location /cdn/nx/ {
+ # AZURE CDN DECALICIOUS
+ location /cdn/de/ {
 
   # BASIC SETTINGS
   keepalive_timeout  5;
@@ -44,7 +44,7 @@ server {
 
   # PROXY SETTINGS
   proxy_redirect         off;
-    proxy_set_header       Host              "www.nutraxen.com";
+  proxy_set_header       Host              "www.decalicious.com";
   proxy_set_header       X-Real-IP         $remote_addr;
   proxy_set_header       X-Forwarded-For   $proxy_add_x_forwarded_for;
   proxy_set_header       X-Forwarded-Proto $scheme;
