--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -10,7 +10,7 @@ upstream phpBackend {
 #     CLOUDAPP AZURE SERVER *.CLOUDAPP.NET
 #-----------------------------------------------------
 server {
-  listen      80;
+  listen      80 default_server;
   server_name *.cloudapp.net;
   root   /usr/share/nginx/sites/wwwroot/;
   index  index.php index.html index.htm;
@@ -119,7 +119,7 @@ error_log           /dev/null;
 #     AZURE TRAFFIC MANAGER MONITORING PAGE
 #-------------------------------------------
 server {
-  listen      100;
+  listen      100 default_server;
   server_name *.cloudapp.net;
 
   # Actual Page
