--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -11,7 +11,7 @@ upstream phpBackend {
 #-----------------------------------------------------
 server {
   listen      80 default_server;
-  server_name *.cloudapp.net;
+  #server_name *.cloudapp.net;
   root   /usr/share/nginx/sites/wwwroot/;
   index  index.php index.html index.htm;
 
@@ -120,7 +120,7 @@ error_log           /dev/null;
 #-------------------------------------------
 server {
   listen      100 default_server;
-  server_name *.cloudapp.net;
+  #server_name *.cloudapp.net;
 
   # Actual Page
   location / {
