--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -62,6 +62,7 @@ server {
   #add_header               Last-Modified "";
   #add_header                ETag "";
   etag                      on;
+  more_set_headers          "Server: ALFRED";
   gzip                      on;
   gzip_vary                 on;
   gzip_http_version         1.0;
