--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -34,8 +34,8 @@ server {
  }
 
 
- # AZURE CDN DECALICIOUS
- location /cdn/de/ {
+ # AZURE CDN - DECALICIOUS.com/X/
+ location /cdn/de/x/ {
 
   # BASIC SETTINGS
   keepalive_timeout  5;
@@ -62,7 +62,7 @@ server {
   #add_header               Last-Modified "";
   #add_header                ETag "";
   etag                      on;
-  more_set_headers          "X-Server: ALFRED";
+  more_set_headers          "Server: AzureCDN";
   gzip                      on;
   gzip_vary                 on;
   gzip_http_version         1.0;
@@ -133,11 +133,8 @@ server {
  }
 
  # Turn off logging
- #access_log          /dev/null;
- #error_log           /dev/null;
-
- error_log       /var/log/nginx/default-error.log;
- access_log      /var/log/nginx/default-access.log;
+ access_log          /dev/null;
+ error_log           /dev/null;
 
 
 }
