--- a/etc-config/nginx.custom.conf
+++ b/etc-config/nginx.custom.conf
@@ -1,7 +1,7 @@
 # CUSTOM NGINX CONFIGURATION - MATADOR
 
 # redone
-# user  www-data;
+user         www-data;
 worker_processes    2;
 worker_priority    -5;
 timer_resolution   100ms;
