--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -8,7 +8,7 @@ upstream phpBackend {
 # ----------------------------------------------------
 #          BACKEND IIS SERVER FARM (Decalicious)     -
 # ----------------------------------------------------
-upstream iis-servers-decalicious {
+upstream iis-servers-decalicious-cdn {
 
  # STICKY IP (SAME SERVER BASED ON IP)
  ip_hash;
@@ -81,7 +81,7 @@ server {
   proxy_set_header          X-Real-IP         $remote_addr;
   proxy_set_header          X-Forwarded-For   $proxy_add_x_forwarded_for;
   proxy_set_header          X-Forwarded-Proto $scheme;
-  proxy_pass                http://iis-servers-decalicious;
+  proxy_pass                http://iis-servers-decalicious-cdn;
   proxy_temp_path           /usr/share/nginx/temp;
   proxy_cache               STATIC;
   proxy_cache_valid         200  1d;
