Private Cache Control

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -89,10 +89,6 @@
     gzip               on;
     gzip_vary          on;
     
-    # HEADERS FOR OTHER THINGS
-    add_header                Cache-Control public;
-    more_set_headers          "Server: DECALS";
-
     # IIS FARM DASHBOARD  https://www.decalicious.com/iis-servers
     location /upstream {
       check_status;
@@ -103,6 +99,10 @@
 
     # MAIN SITE LOCATION
     location / {
+
+      # HEADERS FOR OTHER THINGS
+      add_header                Cache-Control private, max-age=0, no-cache;
+      more_set_headers          "Server: DEX";
 
       # PROXY SETTINGS
       proxy_redirect         off;
