Fix Private Headers

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -88,6 +88,7 @@
     server_tokens      off; 
     gzip               on;
     gzip_vary          on;
+
     
     # IIS FARM DASHBOARD  https://www.decalicious.com/iis-servers
     location /upstream {
@@ -97,11 +98,9 @@
     }
 
 
-    # MAIN SITE LOCATION
+    # MAIN SITE LOCATION (NO CACHING)
     location / {
-
-      # HEADERS FOR OTHER THINGS
-      add_header                Cache-Control private, max-age=0, no-cache;
+      add_header                Cache-Control "private, max-age=0, no-cache";
       more_set_headers          "Server: DEX";
 
       # PROXY SETTINGS
@@ -112,8 +111,10 @@
       proxy_set_header       X-Forwarded-Proto $scheme;
       proxy_pass             http://iis-servers-decalicious;
       proxy_temp_path        /usr/share/nginx/temp;
-      #proxy_connect_timeout 5;
-      #proxy_read_timeout 240;
+      #proxy_connect_timeout  5;
+      #proxy_read_timeout     240;
+
+      # PROXY CACHING
       proxy_cache            off;
 
       #HTTP ERRORS LOCALLY 
@@ -126,26 +127,26 @@
 
 
 
-    # DOWN FOR MAINTENANCE
+    # ERROR PAGE - DOWN FOR MAINTENANCE
     location  ^~ /maintenance.html {
      root   /usr/share/nginx/sites/decalicious-down/;
      index  maintenance.html index.html index.htm;
      allow all;
-   }
+    }
 
 
-   # LOCAL 404 PAGE
-   location  ^~ /404.html {
+    # EROR PAGE - LOCAL 404 PAGE
+    location  ^~ /404.html {
      root   /usr/share/nginx/sites/decalicious-down/;
      index  404.html index.html index.htm;
      allow all;
-   }
+    }
 
-   # LOCAL ERROR PAGE SCRIPTS AND IMAGES
-   location /xs {
+    # LOCAL ERROR PAGE SCRIPTS AND IMAGES (XS Directory)
+    location /xs {
      root   /usr/share/nginx/sites/decalicious-down/;
      allow  all;    	
-   }
+    }
 
    # ERROR PAGES (LOCAL)
    error_page 404  /usr/share/nginx/sites/decalicious-down/404.html;
