--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -80,17 +80,17 @@
    server {
 
     # SERVER SPECIFIC SETTINGS
-    listen             80;
-    server_name        *.decalicious.com;
-    root               /usr/share/nginx/sites/decalicious-down/;
-    keepalive_timeout  5;
-    allow              all;
-    server_tokens      off; 
-    gzip               on;
-    gzip_vary          on;
-
+    listen                80;
+    server_name           *.decalicious.com;
+    root                  /usr/share/nginx/sites/decalicious-down/;
+    keepalive_timeout     5;
+    allow                 all;
+    server_tokens         off; 
+    gzip                  on;
+    gzip_vary             on;
+    more_clear_headers    'Cache-Control';
     
-    # IIS FARM DASHBOARD  https://www.decalicious.com/iis-servers
+    # IIS FARM DASHBOARD  //www.decalicious.com/iis-servers-decalicoius
     location /upstream {
       check_status;
       access_log   off;
@@ -100,8 +100,9 @@
 
     # MAIN SITE LOCATION (NO CACHING)
     location / {
-      add_header                Cache-Control "private, max-age=0, no-cache";
-      more_set_headers          "Server: DEX";
+      etag                  on;
+      add_header            Cache-Control "private, max-age=0, no-cache";
+      more_set_headers      "Server: Bullet-X";
 
       # PROXY SETTINGS
       proxy_redirect         off;
@@ -129,24 +130,24 @@
 
     # ERROR PAGE - DOWN FOR MAINTENANCE
     location  ^~ /maintenance.html {
-     root   /usr/share/nginx/sites/decalicious-down/;
-     index  maintenance.html index.html index.htm;
-     allow all;
+      root   /usr/share/nginx/sites/decalicious-down/;
+      index  maintenance.html index.html index.htm;
+      allow all;
     }
 
 
     # EROR PAGE - LOCAL 404 PAGE
     location  ^~ /404.html {
-     root   /usr/share/nginx/sites/decalicious-down/;
-     index  404.html index.html index.htm;
-     allow all;
+      root   /usr/share/nginx/sites/decalicious-down/;
+      index  404.html index.html index.htm;
+      allow all;
     }
 
     # LOCAL ERROR PAGE SCRIPTS AND IMAGES (XS Directory)
     location /xs {
-     root   /usr/share/nginx/sites/decalicious-down/;
-     allow  all;    	
-    }
+      root   /usr/share/nginx/sites/decalicious-down/;
+      allow  all;    	
+   }
 
    # ERROR PAGES (LOCAL)
    error_page 404  /usr/share/nginx/sites/decalicious-down/404.html;
