Let IIS Handle Gzip

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -86,8 +86,6 @@
     keepalive_timeout     5;
     allow                 all;
     server_tokens         off; 
-    gzip                  on;
-    gzip_vary             on;
     more_clear_headers    'Cache-Control';
     
     # IIS FARM DASHBOARD  //www.decalicious.com/iis-servers-decalicoius
@@ -100,9 +98,12 @@
 
     # MAIN SITE LOCATION (NO CACHING)
     location / {
+      gzip                  off;
+      gzip_vary             off;
+
       etag                  on;
       add_header            Cache-Control "private, max-age=0, no-cache";
-      more_set_headers      "Server: Bullet-X";
+      more_set_headers      "Server: DECALICIOUS";
 
       # PROXY SETTINGS
       proxy_redirect         off;
