Nginx Handle Gzip

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -98,9 +98,8 @@
 
     # MAIN SITE LOCATION (NO CACHING)
     location / {
-      gzip                  off;
-      gzip_vary             off;
-
+      gzip                  on;
+      gzip_vary             on;
       etag                  on;
       add_header            Cache-Control "private, max-age=0, no-cache";
       more_set_headers      "Server: DECALICIOUS";
