CDN Caching NGINX

--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -102,7 +102,7 @@
       gzip_vary             on;
       etag                  on;
       add_header            Cache-Control "private, max-age=0, no-cache";
-      more_set_headers      "Server: DECALICIOUS";
+      more_set_headers      "Server: DECALS";
 
       # PROXY SETTINGS
       proxy_redirect         off;
@@ -125,7 +125,39 @@
     }
 
 
+    # X STATIC CONTENT (IN CASE ITS LOADED WITHOUT SUBDOMAIN)
+    location /x/ {
+      gzip                  on;
+      gzip_vary             on;
+      etag                  on;
+      add_header            Cache-Control "public";
+      more_set_headers      "Server: DECALS-X";
 
+      # PROXY SETTINGS
+      proxy_redirect         off;
+      proxy_set_header       Host              $http_host;
+      proxy_set_header       X-Real-IP         $remote_addr;
+      proxy_set_header       X-Forwarded-For   $proxy_add_x_forwarded_for;
+      proxy_set_header       X-Forwarded-Proto $scheme;
+      proxy_pass             http://iis-servers-decalicious;
+      proxy_temp_path        /usr/share/nginx/temp;
+      #proxy_connect_timeout  5;
+      #proxy_read_timeout     240;
+
+      # PROXY CACHING
+      proxy_cache               Static-DE-WWWX;
+      proxy_cache_path          /usr/share/nginx/cache/www-decalcious-x levels=1:2 keys_zone=one:10m;
+      proxy_cache_valid         200 302 1d;
+      proxy_cache_valid         404     1m;
+
+      proxy_cache_use_stale     error timeout invalid_header updating
+      http_500 http_502 http_503 http_504;
+
+      #HTTP ERRORS LOCALLY 
+      proxy_intercept_errors on; 
+      error_page 500 502 503 504 =503 /maintenance.html;
+      #error_page 404 =404 /404.html;      
+    }
 
 
     # ERROR PAGE - DOWN FOR MAINTENANCE
