--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -83,7 +83,10 @@ server {
   proxy_set_header          X-Forwarded-Proto $scheme;
   proxy_pass                http://iis-servers-decalicious-cdn;
   proxy_temp_path           /usr/share/nginx/temp;
-  proxy_cache               STATIC;
+
+  # PROXY CACHING
+  proxy_cache_path          /usr/share/nginx/cache/cdn-decalcious levels=1:2 keys_zone=one:10m;
+  proxy_cache               Static-DE-CDN;
   proxy_cache_valid         200  1d;
   proxy_cache_use_stale     error timeout invalid_header updating
   http_500 http_502 http_503 http_504;
