--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -145,7 +145,7 @@
       #proxy_read_timeout     240;
 
       # PROXY CACHING
-      proxy_cache               Static-DE-WWWX;
+      proxy_cache               WWWDEX;
       proxy_cache_valid         200 302 1d;
       proxy_cache_valid         404     1m;
 
