--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -85,7 +85,7 @@ server {
   proxy_temp_path           /usr/share/nginx/temp;
 
   # PROXY CACHING
-  proxy_cache               CDNDE;
+  proxy_cache               STATIC;
   proxy_cache_valid         200  1d;
   proxy_cache_use_stale     error timeout invalid_header updating
   http_500 http_502 http_503 http_504;
