--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -100,9 +100,9 @@
     location / {
 
       more_set_headers          "Server: DECALS";
-      add_header                Cache-Control "private, max-age=0, no-cache";
+      add_header                Cache-Control "public, max-age=9";
       etag                      on;
-      expires                   20s;
+      expires                   60s;
 
       # Gzip
       gzip                      on;
@@ -145,7 +145,7 @@
     location /x/ {
 
       more_set_headers          "Server: DECALS-X";
-      add_header                Cache-Control "public";
+      add_header                Cache-Control "no-transform,public,max-age=300,s-maxage=900";
       etag                      on;
       expires                   425d;
       
@@ -188,6 +188,7 @@
       proxy_intercept_errors on; 
       error_page 500 502 503 504 =503 /maintenance.html;
       #error_page 404 =404 /404.html;      
+      break;
     }
 
 
