--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -54,7 +54,7 @@
      ip_hash;
 
      # UPSTREAM IIS SERVERS
-     server ww1.decalicious.com;
+     #server ww1.decalicious.com;
      server ww2.decalicious.com;
      #server ww3.decalicious.com;
      #server ww4.decalicious.com;
