--- a/vhosts/default.conf
+++ b/vhosts/default.conf
@@ -14,7 +14,7 @@ upstream iis-servers-decalicious-cdn {
  ip_hash;
 
  # UPSTREAM IIS SERVERS
- server ww1.decalicious.com;
+ #server ww1.decalicious.com;
  server ww2.decalicious.com;
  #server ww3.decalicious.com;
  #server ww4.decalicious.com;
@@ -41,107 +41,100 @@ server {
   #server_name *.cloudapp.net;
   root   /usr/share/nginx/sites/wwwroot/;
   index  index.php index.html index.htm;
+  keepalive_timeout     5;
+  allow                 all;
+  server_tokens         off; 
+  more_clear_headers    'Cache-Control';
 
 
   location / {
-   try_files $uri $uri/ /index.html;
-   allow all;
- }
-
- error_page   404  /404.html;
- location = /usr/share/nginx/sites/wwwroot/404.html {
-   root   html;
-   allow all;
- }
-
- error_page   500 502 503 504  /error.html;
- location = /usr/share/nginx/sites/wwwroot/error.html {
-   root   html;
-   allow all;
- }
-
-
-
- # ------------------------------------------
- #     AZURE CDN - DECALICIOUS.com/X/
- #     IIS will remove the /cdn/de/ from url via rewrite
- #     Azure will remove /cdn/ automaically
- #     This means all cdn urls start with /de/x/
- #-------------------------------------------
- location /cdn/de/x/ {
-
-  # BASIC SETTINGS
-  keepalive_timeout  5;
-  allow              all;
-  server_tokens      off; 
-
-  # PROXY SETTINGS
-  proxy_redirect            off;
-  proxy_set_header          Host              "www.decalicious.com";
-  proxy_set_header          X-Real-IP         $remote_addr;
-  proxy_set_header          X-Forwarded-For   $proxy_add_x_forwarded_for;
-  proxy_set_header          X-Forwarded-Proto $scheme;
-  proxy_pass                http://iis-servers-decalicious-cdn;
-  proxy_temp_path           /usr/share/nginx/temp;
-
-  # PROXY CACHING
-  proxy_cache               STATIC;
-  proxy_cache_valid         200  1d;
-  proxy_cache_use_stale     error timeout invalid_header updating
-  http_500 http_502 http_503 http_504;
-  # PERFORMANCE
-  #expires                  max;
-  expires                   425d;
-  #add_header               Cache-Control "public, must-revalidate, proxy-revalidate";
-  add_header                Cache-Control "public";
-  #add_header               Last-Modified "";
-  #add_header                ETag "";
-  etag                      on;
-  more_clear_headers        'Server';
-  more_set_headers          "X-Server: Azure-CDN";
-  gzip                      on;
-  gzip_vary                 on;
-  gzip_http_version         1.0;
-  gzip_disable              "MSIE [1-6].(?!.*SV1)";
-  gzip_min_length           750;
-  gzip_buffers              64 8k;
-  gzip_comp_level           3;
-  gzip_proxied              any;
-  gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-  open_file_cache           max=1000 inactive=500s;
-  open_file_cache_valid     600s;
-  open_file_cache_errors    on;
-  break;  
+    try_files $uri $uri/ /index.html;
+    allow all;
+  }
+  error_page   404  /404.html;
+  location = /usr/share/nginx/sites/wwwroot/404.html {
+    root   html;
+    allow all;
+  }
+  error_page   500 502 503 504  /error.html;
+    location = /usr/share/nginx/sites/wwwroot/error.html {
+    root   html;
+    allow all;
   }
 
+  # PHP Files Handled Locally Via NGINX 
+  # This will allow us to use git hooks to update the nginx config..
+  location ~ \.php$ {
+    try_files $uri =404;
+    fastcgi_split_path_info ^(.+\.php)(/.+)$;
+    fastcgi_pass   phpBackend;
+    fastcgi_index  index.php;
+    # IMPORTANT BELOW - NEEDS FULL PATH TO SITE DIRECTORY !!!
+    fastcgi_param  SCRIPT_FILENAME  /usr/share/nginx/sites/wwwroot/$fastcgi_script_name;
+    include fastcgi_params;
+    fastcgi_intercept_errors        on;
+    fastcgi_ignore_client_abort     off;
+    fastcgi_connect_timeout 60;
+    fastcgi_send_timeout 180;
+    fastcgi_read_timeout 180;
+    fastcgi_buffer_size 128k;
+    fastcgi_buffers 4 256k;
+    fastcgi_busy_buffers_size 256k;
+    fastcgi_temp_file_write_size 256k;
+  }
 
+  # AZURE CDN - DECALICIOUS.com/X/
+  # IIS will remove the /cdn/de/ from url via rewrite
+  # Azure will remove /cdn/ automaically
+  # This means all cdn urls start with /de/x/
+  location /cdn/de/x/ {
+    # BASIC SETTINGS
+    keepalive_timeout  5;
+    allow              all;
+    server_tokens      off; 
 
+    # PROXY SETTINGS
+    proxy_redirect            off;
+    proxy_set_header          Host              "www.decalicious.com";
+    proxy_set_header          X-Real-IP         $remote_addr;
+    proxy_set_header          X-Forwarded-For   $proxy_add_x_forwarded_for;
+    proxy_set_header          X-Forwarded-Proto $scheme;
+    proxy_pass                http://iis-servers-decalicious-cdn;
+    proxy_temp_path           /usr/share/nginx/temp;
 
-# ------------------------------------------
-#     PHP FILES RUN LOCALLY ON THIS SERVER
-#-------------------------------------------
-location ~ \.php$ {
- try_files $uri =404;
- fastcgi_split_path_info ^(.+\.php)(/.+)$;
- fastcgi_pass   phpBackend;
- fastcgi_index  index.php;
- # IMPORTANT BELOW - NEEDS FULL PATH TO SITE DIRECTORY !!!
- fastcgi_param  SCRIPT_FILENAME  /usr/share/nginx/sites/wwwroot/$fastcgi_script_name;
- include fastcgi_params;
- fastcgi_intercept_errors        on;
- fastcgi_ignore_client_abort     off;
- fastcgi_connect_timeout 60;
- fastcgi_send_timeout 180;
- fastcgi_read_timeout 180;
- fastcgi_buffer_size 128k;
- fastcgi_buffers 4 256k;
- fastcgi_busy_buffers_size 256k;
- fastcgi_temp_file_write_size 256k;
- }
+    # PROXY CACHING
+    proxy_cache               STATIC;
+    proxy_cache_valid         200  1d;
+    proxy_cache_use_stale     error timeout invalid_header updating
+    http_500 http_502 http_503 http_504;
+    # PERFORMANCE
+    #expires                  max;
+    expires                   425d;
+    #add_header               Cache-Control "public, must-revalidate, proxy-revalidate";
+    add_header                Cache-Control "public";
+    #add_header               Last-Modified "";
+    #add_header                ETag "";
+    etag                      on;
+    more_clear_headers        'Server';
+    more_set_headers          "X-Server: Azure-CDN";
+    gzip                      on;
+    gzip_vary                 on;
+    gzip_http_version         1.0;
+    gzip_disable              "MSIE [1-6].(?!.*SV1)";
+    gzip_min_length           750;
+    gzip_buffers              64 8k;
+    gzip_comp_level           3;
+    gzip_proxied              any;
+    gzip_types                text/plain text/css application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+    open_file_cache           max=1000 inactive=500s;
+    open_file_cache_valid     600s;
+    open_file_cache_errors    on;
+    break;  
+  }
 
-# Logging - Off
-access_log          /dev/null;
-error_log           /dev/null;
+  # Logging - Off
+  access_log          /dev/null;
+  error_log           /dev/null;
 
 
 }
@@ -160,7 +153,7 @@ server {
    allow all;
    gzip                      on;
    gzip_vary                 on;
-  }
+ }
 
  # Turn off logging
  access_log          /dev/null;
