--- a/vhosts/decalicious.conf
+++ b/vhosts/decalicious.conf
@@ -54,8 +54,8 @@
      ip_hash;
 
      # UPSTREAM IIS SERVERS
-     #server ww1.decalicious.com;
-     server ww2.decalicious.com;
+     server ww1.decalicious.com;
+     #server ww2.decalicious.com;
      #server ww3.decalicious.com;
      #server ww4.decalicious.com;
      #server ww5.decalicious.com;
@@ -144,6 +144,7 @@
     # X STATIC CONTENT (IN CASE ITS LOADED WITHOUT SUBDOMAIN)
     location /x/ {
 
+      # HEADERS
       more_set_headers          "Server: DECALS-X";
       add_header                Cache-Control "no-transform,public,max-age=300,s-maxage=900";
       etag                      on;
